--- a/index.html
+++ b/index.html
@@ -523,7 +523,7 @@
           <div class="project-title">
             <a>Power BI: Metaphor</a>
           </div>
-          <p class="project-desc">A small Power BI report featuring Sega and JP: Atlus' Metaphor Refantazio game. Additional description and Github link will be followed once the project is completed.</p>
+          <p class="project-desc">A small Power BI report featuring Sega and JP: Atlus' Metaphor Refantazio game. Additional description and Github link will follow once the project is completed.</p>
         </li>
       </ul>
     </section>
@@ -538,7 +538,7 @@
         <a href="https://github.com/dencadizal" target="_blank">GitHub</a>
         <a href="mailto:denissecadizal@gmail.com">Email</a>
         <a href="https://www.linkedin.com/in/denisse-mae-cadizal/" target="_blank">LinkedIn</a>
-        <a href="https://github.com/dencadizal/dencadizal.github.io/blob/main/Denisse%20Mae%20Cadizal%20-%20CV.pdf" target="_blank">Get my CV</a> 
+        <a href="https://raw.githubusercontent.com/dencadizal/dencadizal.github.io/main/Denisse%20Mae%20Cadizal%20-%20CV.pdf" target="_blank">Get my CV</a> 
       </div>
     </section>
 
