--- a/index.html
+++ b/index.html
@@ -419,10 +419,10 @@
     <section id="about">
       <h2>About</h2>
       <p>
-        Detail-oriented and highly organized professional with more than 8 years 
-        of experience in data analysis, data modelling and software development. 
-        I specialize in managing complex datasets, problem-solving, and 
-        delivering accurate, actionable insights through data visualization.
+        I have more than 8 years of experience in data modelling, data analysis and software
+        development. I design and implement end-to-end data solutions across multiple 
+        industries, leveraging different tools to transform complex datasets into reliable,
+        automated workflows.
       </p>
     </section>
 
@@ -440,9 +440,10 @@
           <div class="job-company">bneXt Inc.</div>
           <div class="job-location">Metro Manila, Philippines</div>
           <p class="job-desc">
-            Design and implement ETL processes using SAP BW and Microsoft Fabric. 
-            Build interactive dashboards with Power BI and SAP Analytics Cloud. 
-            Write complex SQL and SAP ABAP for data transformation and automated reporting.
+            I contribute to solution design and data architecture planning for prospective projects. I 
+            design and implement ETL pipelines using SAP BW and Microsoft Fabric, and architect 
+            data models in Power BI and SAP Analytics Cloud. I've served as the lead dashboard 
+            developer across 5 client engagements spanning different industries.
           </p>
         </li>
         <li>
@@ -453,8 +454,10 @@
           <div class="job-company">Accenture Inc.</div>
           <div class="job-location">Metro Manila, Philippines</div>
           <p class="job-desc">
-            Maintained 99% system uptime through production support and issue resolution. 
-            Enhanced SAP ABAP programs and created technical documentation for knowledge transfer.
+            I resolved 90–100+ production issues across different SAP modules,
+            consistently meeting SLA targets. I enhanced SAP ABAP programs and developed new
+            features for improved system performance. I also created technical documentation for
+            knowledge transfer across a 20–30 member team.
           </p>
         </li>
       </ul>
@@ -476,7 +479,7 @@
         </div>
         <div class="skill-category">
           <h3>ETL & Cloud</h3>
-          <p>Microsoft Fabric, SAP BW, Microsoft Azure, SAP Cloud Platform</p>
+          <p>Microsoft Fabric, SAP BW, Microsoft Azure, SAP Business Data Cloud</p>
         </div>
         <div class="skill-category">
           <h3>Other Tools</h3>
