--- a/index.html
+++ b/index.html
@@ -404,7 +404,7 @@
     <section id="hero">
       <h1>Hey, I'm Denisse</h1>
       <p>
-        I'm a Data Analytics Specialist based in Metro Manila, Philippines.
+        I'm a Senior Data Analytics Specialist based in Metro Manila, Philippines.
         I turn complex data into clear, actionable insights.
       </p>
       <p>
