--- a/index.html
+++ b/index.html
@@ -434,7 +434,7 @@
       <ul class="experience-list">
         <li>
           <div class="job-header">
-            <span class="job-title">Data Analytics Specialist</span>
+            <span class="job-title">Senior Data Analytics Specialist</span>
             <span class="job-date">Nov 2018 — Present</span>
           </div>
           <div class="job-company">bneXt Inc.</div>
